--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "@types/node": "^16.18.95",
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.24",
+    "axios": "^1.6.8",
+    "fs": "^0.0.1-security",
+    "fs-extra": "^11.2.0",
     "modal": "^1.2.0",
     "react": "^18.2.0",
+    "react-date-picker": "^10.6.0",
+    "react-datepicker": "^6.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
@@ -42,5 +47,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/fs-extra": "^11.0.4",
+    "@types/react-datepicker": "^6.2.0"
   }
 }
